# SmartHomeSolution

./: .cproject  .project  README.md  Smart_Home.ioc  main.c  relay_control.h  stm32f4xx_hal_msp.c  strcture.h
MC/: dht11_driver.c  dht11_driver.h  main.h  relay_control.c
QT-UI/: Bedroom.qml  CMakeLists.txt  HttpManager.cpp  HttpManager.h  KitchenPage.qml  Laundry.qml  LeftPane.qml  MiddlePane.qml  MqttManager.cpp  MqttManager.h  RightPane.qml  RightPaneLightSwitchComponent.qml  Switch.qml  main.cpp  mqttmanager.h
Qt_UI_RPI_Interfacing/: Readme.md  auto_capture.py  eyeclosure_mediapipe.py  face_commands  face_recognition.py
WCM/: esp32_stm32_comm.c  stm32temparature.ino
dataintegration_eyeblink/: AnnimationValues.qml  ArcProgressBar.qml  Back_left.qml  CircularProgressBar.qml  FaceRecognition.cpp  FaceRecognition.h  Makefile  MyText.qml  SDV.cpp  SDV.h  SpeedGaugeStyle.qml  SpeedoMeter_painter.qml  data_integration.pro  data_integration.pro.user.d264aab  data_integration.pro.user.eacf8de  dms.qml  hud.qml  main.cpp  main.qml  moc_SDV.cpp  qml.qrc  sample.qml
